# smartcapital

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml
config/: config.example.yaml
deploy/: azure-container-apps.md
docs/: ARCHITECTURE.md  DESIGN.md
src/aiis/: __init__.py  cli.py  config.py
src/aiis/analyst/: __init__.py  adversarial.py  base_rate.py  llm.py  packet.py  prompts.py
src/aiis/approval/: __init__.py  fatigue.py  security.py  telegram_bot.py
src/aiis/data/: __init__.py  base.py  events.py  fundamentals.py  market.py
src/aiis/db/: __init__.py  models.py  session.py
src/aiis/evaluation/: rollout.py  scoring.py
src/aiis/execution/: __init__.py  audit.py  executor.py
src/aiis/guardrails/: __init__.py  engine.py  killswitch.py
src/aiis/strategy/: engine.py  lumibot_strategy.py
src/aiis/triggers/: __init__.py  blackout.py  buy_triggers.py  dedup.py  indicators.py  review_triggers.py
src/smartcapital/: __init__.py  analyst.py  cli.py  config.py  db.py  engine.py  executor.py  fundamentals.py  market.py  security.py  state.py  telegram_bot.py  triggers.py
tests/: conftest.py  test_analyst.py  test_approval_security.py  test_freshness.py  test_fundamentals.py  test_guardrails.py  test_indicators.py  test_security.py  test_triggers.py
