[project]
name = "smartcapital"
version = "1.0.0"
description = "SmartCapital v1 - trigger -> data -> LLM buy/decline -> Telegram approval -> limit order"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.21",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pandas>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-telegram-bot>=21.0",
    "PyYAML>=6.0",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
smartcapital = "smartcapital.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"
